--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -12,4 +12,8 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '8'
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - run: ./gradlew build --no-daemon
+
+# https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
