--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -12,8 +12,13 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '8'
+
+      - name: Display version
+        run: ./gradlew --version
+
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+
       - run: ./gradlew build --no-daemon
 
 # https://github.com/gradle/wrapper-validation-action
