--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -8,10 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: '8'
+
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
 
       - name: Display version
         run: ./gradlew --version
