--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ plugins {
 group 'io.github.markrmullan'
 version '1.0.0-SNAPSHOT'
 
+task printVersion {
+    println project.version
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -15,10 +19,16 @@ publishing {
         }
     }
 
+    // See https://docs.github.com/en/actions/publishing-packages/publishing-java-packages-with-gradle
+    // and https://docs.gradle.org/current/userguide/publishing_setup.html
     repositories {
         maven {
-            name = 'maven'
-            url = layout.buildDirectory.dir("repo")
+            name = "OSSRH"
+            url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+            credentials {
+                username = System.getenv("MAVEN_USERNAME")
+                password = System.getenv("MAVEN_PASSWORD")
+            }
         }
     }
 }
