--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,10 @@ publishing {
             def snapshotRepo = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
             name = "OSSRH"
             url = isReleaseBuild() ? releaseRepo : snapshotRepo
-            credentials {
-                username = System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD")
-            }
+//            credentials {
+//                username = System.getenv("MAVEN_USERNAME")
+//                password = System.getenv("MAVEN_PASSWORD")
+//            }
         }
     }
 }
