tidies and fixes

--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -32,4 +32,5 @@ jobs:
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
+          # upload the ASCII-armored public key to https://keyserver.ubuntu.com/
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ARTIFACT_SIGNING_PRIVATE_KEY }}
