--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 # this groupId is OSSRH registered https://issues.sonatype.org/browse/OSSRH-76799
+# https://github.com/vanniktech/gradle-maven-publish-plugin uses these properties to construct the generated pom.xml
 GROUP=io.github.markrmullan
-POM_ARTIFACT_ID=mylibrary-runtime
+POM_ARTIFACT_ID=gh-actions-java-playground
 VERSION_NAME=1.0.0
 
 POM_NAME=GH Actions Java Playground
 POM_DESCRIPTION=A place to mess around with Github Actions
 POM_INCEPTION_YEAR=2021
-POM_URL=https://github.com/username/mylibrary/
+POM_URL=https://github.com/markrmullan/gh-actions-java-playground/
 
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
