try rm publishing block

--- a/build.gradle
+++ b/build.gradle
@@ -17,20 +17,20 @@ def isReleaseBuild() {
     return !project.version.contains("SNAPSHOT")
 }
 
-publishing {
-    repositories {
-        maven {
-            def releaseRepo = "https://s01.oss.sonatype.org/content/repositories/releases/"
-            def snapshotRepo = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-            name = "OSSRH"
-            url = isReleaseBuild() ? releaseRepo : snapshotRepo
-            credentials {
-                username = System.getenv("ORG_GRADLE_PROJECT_mavenCentralUsername")
-                password = System.getenv("ORG_GRADLE_PROJECT_mavenCentralPassword")
-            }
-        }
-    }
-}
+//publishing {
+//    repositories {
+//        maven {
+//            def releaseRepo = "$buildDir/repos/releases"
+//            def snapshotRepo = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+//            name = "OSSRH"
+//            url = isReleaseBuild() ? releaseRepo : snapshotRepo
+//            credentials {
+//                username = System.getenv("ORG_GRADLE_PROJECT_mavenCentralUsername")
+//                password = System.getenv("ORG_GRADLE_PROJECT_mavenCentralPassword")
+//            }
+//        }
+//    }
+//}
 
 repositories {
     mavenCentral()
