--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # https://github.com/vanniktech/gradle-maven-publish-plugin uses these properties to construct the generated pom.xml
 GROUP=io.github.markrmullan
 POM_ARTIFACT_ID=gh-actions-java-playground
-VERSION_NAME=1.0.1
+VERSION_NAME=1.0.2
 
 POM_NAME=GH Actions Java Playground
 POM_DESCRIPTION=A place to mess around with Github Actions
@@ -22,4 +22,4 @@ POM_DEVELOPER_URL=https://github.com/markrmullan/
 # Nexus and Gradle 6 have some compatibility issues. This addresses 'Event: Failed: Repository Writable' when
 # attempting to transition a repository from Closed to Released in Nexus
 # see https://github.com/gradle/gradle/issues/11308
-systemProp.org.gradle.internal.publish.checksums.insecure=true
+#systemProp.org.gradle.internal.publish.checksums.insecure=true
