--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -36,9 +36,8 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ARTIFACT_SIGNING_PRIVATE_KEY }}
 
       - name: Close and release package
-#        closeAndReleaseRepository
         run: |
-          if ! ./gradlew asdf; then
+          if ! ./gradlew closeAndReleaseRepository; then
             echo "🛑🛑🛑"
             echo "Publish to Nexus Sonatype succeeded, but failed to close and release. This step assumes there
             is only one staging repository active when it is called. Stale staging repositories may need
