--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 // from gradle.properties
 group = project.property('GROUP')
 //version = project.property('VERSION_NAME')
-version = '1.0.9'
+version = '1.0.10-SNAPSHOT'
 
 task printVersion {
     println project.version
