--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -38,8 +38,7 @@ jobs:
 
       - name: Close and release package
         run: |
-          if ./gradlew -q printVersion | grep -q "SNAPSHOT"
-            then
+          if ./gradlew -q printVersion | grep -q "SNAPSHOT"; then
             echo "This is a SNAPSHOT release — exiting early and not invoking ./gradlew closeAndReleaseRepository"
             exit 0
           fi
